<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">ChatApp</string>
    <string name="welcome_back">Welcome_Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">add image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="phienban">Version</string>
    <string name="loading">Loading...</string>
    <string name="info">info.profile.TuanVu</string>
    <string name="action_chat">Chat</string>
    <string name="action_friends">Friends</string>
    <string name="action_settings">Settings</string>
    <string name="re_enter_old_password">Re-enter old password</string>
    <string name="password_new">Password new</string>
    <string name="save">Save</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="select_language">Select language</string>
    <string name="success_update_language">Successfully updated language</string>
    <string name="friends">Friends</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="change_password">Change Password</string>
    <string name="language">Language</string>
    <string name="log_out">Log Out</string>
    <string name="are_you_sure_change_picture_group_chat">Are you sure you want to change the chat group photo?</string>
    <string name="ok">Ok</string>
    <string name="you_have_success_update_your_profile_picture">You have successfully updated your profile picture</string>
    <string name="cancel">Cancel</string>
    <string name="old_pass_cannot_blank">Old password cannot be blank</string>
    <string name="new_pass_cannot_blank">New password cannot be blank</string>
    <string name="old_pass_is_incorrect">Old password is incorrect</string>
    <string name="change_pass_success">Change password successfully</string>
    <string name="search">Search...</string>
    <string name="sdt">SDT</string>
    <string name="phone_number">Phone Number</string>

</resources>