<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/primary"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    tools:context=".activities.SlashScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
    <FrameLayout
        android:id="@+id/layoutImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_100sdp"
        tools:ignore="MissingConstraints">
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:background="@drawable/chatapp"
            android:scaleType="centerCrop"
            app:riv_oval="true"
           />
    </FrameLayout>
        <TextView
            android:id="@+id/txtPhienBan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phienban"
            android:layout_marginTop="@dimen/_10ssp"
            android:textColor="@color/white" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:indeterminateTint="#FFFFFF"
        app:layout_constraintRight_toLeftOf="@id/txtTai"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtTencongty"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/txtTai"
        app:layout_constraintLeft_toLeftOf="@+id/txtTai"
        app:layout_constraintRight_toRightOf="@+id/txtTai"
        android:text="@string/info"/>
    <TextView
        android:id="@+id/txtTai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/loading" />

</androidx.constraintlayout.widget.ConstraintLayout>