<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingActivity"
    tools:ignore="MissingConstraints">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageProfile"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/background_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="@dimen/_50sdp" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="108dp"
        android:background="@drawable/ic_camera"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="@dimen/_50sdp" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text=""
        android:textColor="@color/primary_dark"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageProfile" />
    <LinearLayout
        android:id="@+id/layout_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textName"
        >


        <LinearLayout
            android:id="@+id/buttonDarkMode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_content_bottom"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingTop="@dimen/_8ssp"
            android:paddingBottom="@dimen/_8sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_margin="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/ic_call"
                android:tint="@color/green"/>

            <TextView
                android:id="@+id/textSDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/phone_number"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/_18sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_content_top"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_8ssp"
            android:paddingBottom="@dimen/_8sdp"
            tools:ignore="RtlSymmetry">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_margin="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/ic_changer"
                android:tint="@color/green" />

            <TextView
                android:id="@+id/textChangePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/change_password"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/_18sdp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_mode"
        >


        <LinearLayout
            android:id="@+id/buttonLanguage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_content_bottom"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingTop="@dimen/_8ssp"
            android:paddingBottom="@dimen/_8sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_margin="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/ic_language"
                android:tint="@color/green" />

            <TextView
                android:id="@+id/textLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/language"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/_18sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLogout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_content_top"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingTop="@dimen/_8ssp"
            android:paddingBottom="@dimen/_8sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_margin="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/ic_logout"
                android:backgroundTint="@color/error"
                android:tint="@color/green" />

            <TextView
                android:id="@+id/textLogOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/log_out"
                android:textColor="@color/error"
                android:textSize="@dimen/_18ssp" />
        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/menu_bottom_nav"
        app:itemBackground="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:itemIconTint="@color/bottom_color_nav"
        app:itemTextColor="@color/bottom_color_nav"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>